Fix UI bleeding on trip details horizontal scrolling

--- a/src/app/features/trip-detail/components/trip-balances/trip-balances.scss
+++ b/src/app/features/trip-detail/components/trip-balances/trip-balances.scss
@@ -5,6 +5,11 @@ $text-inactive: #A8A29E;
 $bg: #FFFFFF;
 $border: #F0F0F0;
 
+:host {
+  display: block;
+  width: 100%;
+}
+
 // Import shared expense styles
 @import '../trip-expenses/trip-expenses.scss';
 
